--- a/index.html
+++ b/index.html
@@ -1,2 +1,6 @@
+
 <canvas id="canvas" height="100%" width="100%"></canvas>
 <span>Move with arrow keys for fun blob physics.</span>
+
+<script src="script.js" type=module></script>
+<link rel="stylesheet" href="style.css">
