--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- aaa -->
+<!-- aaaa -->
 <canvas id="canvas" height="100%" width="100%"></canvas>
 <span>Move with arrow keys for fun blob physics.</span>
 
